force-app/main/default/objects/Hunting_Velocity__c/Hunting_Velocity__c.object-meta.xml
<CustomObject>
    <description>RO-1336</description>
    <label>Hunting Velocity</label>
    <nameField>
        <label>Hunting Velocity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hunting Velocities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>