force-app/main/default/objects/Hunting_Velocity__c/fields/Calendar_Week__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Week__c</fullName>
    <formula>IF( 
  CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7) &gt; 52,
  &quot;52&quot;,
  TEXT(CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Week</label>
    <type>Text</type>
</CustomField>