force-app/main/default/objects/Hunting_Velocity__c/fields/Calendar_Week_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Week_Year__c</fullName>
    <formula>CASE(Calendar_Week__c,
&quot;1&quot;, &quot;01&quot;,
&quot;2&quot;, &quot;02&quot;,
&quot;3&quot;, &quot;03&quot;,
&quot;4&quot;, &quot;04&quot;,
&quot;5&quot;, &quot;05&quot;,
&quot;6&quot;, &quot;06&quot;,
&quot;7&quot;, &quot;07&quot;,
&quot;8&quot;, &quot;08&quot;,
&quot;9&quot;, &quot;09&quot;,
Calendar_Week__c)

&amp; &quot; / &quot; &amp; TEXT(YEAR( Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Week &amp; Year</label>
    <type>Text</type>
</CustomField>