force-app/main/default/objects/Hunting_Velocity__c/fields/Number_of_Pilots__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pilots__c</fullName>
    <label>Number of Pilots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>