force-app/main/default/objects/Hunting_Velocity__c/fields/Number_of_Planned_Demos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Planned_Demos__c</fullName>
    <formula>Number_of_Timestamps_Rescheduling__c +  Number_of_Timestamps_Demo_Held__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Planned Demos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>