force-app/main/default/objects/Hunting_Velocity__c/fields/Number_of_Timestamps_Rescheduling__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Timestamps_Rescheduling__c</fullName>
    <description>Populated via flow &quot;Hunting Velocity&quot;
RO-1334</description>
    <label>Number of Timestamps Rescheduling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>